Socket only establishes a connection with server when users logs in

--- a/client/components/Chat/SideNav/SidebarNav.module.css
+++ b/client/components/Chat/SideNav/SidebarNav.module.css
@@ -1,3 +1,10 @@
 .avatar:hover {
-    filter: brightness(90%);
+  filter: brightness(90%);
+}
+.toggleCheckbox:checked {
+  right: 0;
+  border-color: #68d391;
+}
+.toggleCheckbox:checked + .toggleLabel {
+  background-color: #68d391;
 }
